force-app/main/default/objects/Intake__c/Intake__c.object-meta.xml
<CustomObject>
    <label>Intake</label>
    <nameField>
        <label>Intake Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intake</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>