force-app/main/default/objects/Intake__c/fields/Alternate_Rep_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Rep_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Rep Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake (Alternate Rep Account Lookup)</relationshipLabel>
    <relationshipName>Intake9</relationshipName>
    <type>Lookup</type>
</CustomField>