force-app/main/default/objects/Intake__c/fields/Alternate_Rep_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Rep_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Rep Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake (Alternate Rep Contact Lookup)</relationshipLabel>
    <relationshipName>Intake6</relationshipName>
    <type>Lookup</type>
</CustomField>