force-app/main/default/objects/Intake__c/fields/Annual_Accounting_Required__c.field-meta.xml
<CustomField>
    <fullName>Annual_Accounting_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Accounting Required</label>
    <type>Checkbox</type>
</CustomField>