force-app/main/default/objects/Intake__c/fields/Assigned_Staff__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intake</relationshipName>
    <type>Lookup</type>
</CustomField>