force-app/main/default/objects/Intake__c/fields/Attorney_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake (Attorney Account)</relationshipLabel>
    <relationshipName>Intake3</relationshipName>
    <type>Lookup</type>
</CustomField>