force-app/main/default/objects/Intake__c/fields/Attorney_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Account_Name__c</fullName>
    <label>Attorney Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>