force-app/main/default/objects/Intake__c/fields/Attorney_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake (Attorney)</relationshipLabel>
    <relationshipName>Trust_Applications6</relationshipName>
    <type>Lookup</type>
</CustomField>