force-app/main/default/objects/Intake__c/fields/Attorney_Email__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Email__c</fullName>
    <label>Attorney Email</label>
    <type>Email</type>
</CustomField>