force-app/main/default/objects/Intake__c/fields/Attorney_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Attorney_First_Name__c</fullName>
    <label>Attorney First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>