force-app/main/default/objects/Intake__c/fields/Bene_Age__c.field-meta.xml
<CustomField>
    <fullName>Bene_Age__c</fullName>
    <formula>FLOOR((TODAY()-Bene_Birthdate__c)/365.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bene Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>