force-app/main/default/objects/Intake__c/fields/Bene_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Bene_Birthdate__c</fullName>
    <label>Bene Birthdate</label>
    <type>Date</type>
</CustomField>