force-app/main/default/objects/Intake__c/fields/Bene_Email__c.field-meta.xml
<CustomField>
    <fullName>Bene_Email__c</fullName>
    <label>Bene Email</label>
    <type>Email</type>
</CustomField>