force-app/main/default/objects/Intake__c/fields/Bene_Gender__c.field-meta.xml
<CustomField>
    <fullName>Bene_Gender__c</fullName>
    <label>Bene Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Non-Binary</fullName>
            </value>
            <value>
                <fullName>Genderfluid</fullName>
            </value>
            <value>
                <fullName>Gender Non-Conforming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>