force-app/main/default/objects/Intake__c/fields/Bene_Gender_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Bene_Gender_Pronouns__c</fullName>
    <label>Bene Gender Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>He/His</fullName>
            </value>
            <value>
                <fullName>She/Her/Hers</fullName>
            </value>
            <value>
                <fullName>They/Their</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>