force-app/main/default/objects/Intake__c/fields/Bene_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Bene_Last_Name__c</fullName>
    <label>Bene Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>