force-app/main/default/objects/Intake__c/fields/Bene_Last_Name_First_Letter__c.field-meta.xml
<CustomField>
    <fullName>Bene_Last_Name_First_Letter__c</fullName>
    <formula>IF(!ISBLANK(Beneficiary__c), Beneficiary__r.Beneficiary_Last_Name_First_Letter__c , LEFT(Bene_Last_Name__c,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bene Last Name First Letter</label>
    <type>Text</type>
</CustomField>