force-app/main/default/objects/Intake__c/fields/Bene_Living_Country__c.field-meta.xml
<CustomField>
    <fullName>Bene_Living_Country__c</fullName>
    <label>Bene Living Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>