force-app/main/default/objects/Intake__c/fields/Bene_Living_County__c.field-meta.xml
<CustomField>
    <fullName>Bene_Living_County__c</fullName>
    <label>Bene Living County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Texas_Counties</valueSetName>
    </valueSet>
</CustomField>