force-app/main/default/objects/Intake__c/fields/Bene_Living_State__c.field-meta.xml
<CustomField>
    <fullName>Bene_Living_State__c</fullName>
    <defaultValue>&quot;TX&quot;</defaultValue>
    <label>Bene Living State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>