force-app/main/default/objects/Intake__c/fields/Bene_Living_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Bene_Living_Street_1__c</fullName>
    <label>Bene Living Street 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>