force-app/main/default/objects/Intake__c/fields/Bene_Living_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Bene_Living_Street_2__c</fullName>
    <label>Bene Living Street 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>