force-app/main/default/objects/Intake__c/fields/Bene_Living_Zip__c.field-meta.xml
<CustomField>
    <fullName>Bene_Living_Zip__c</fullName>
    <label>Bene Living Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>