force-app/main/default/objects/Intake__c/fields/Bene_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Bene_Mailing_City__c</fullName>
    <label>Bene Mailing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>