force-app/main/default/objects/Intake__c/fields/Bene_Mailing_Same_as_Residential__c.field-meta.xml
<CustomField>
    <fullName>Bene_Mailing_Same_as_Residential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bene Mailing Same as Residential</label>
    <type>Checkbox</type>
</CustomField>