force-app/main/default/objects/Intake__c/fields/Bene_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Bene_Mailing_State__c</fullName>
    <label>Bene Mailing State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>