force-app/main/default/objects/Intake__c/fields/Bene_Mailing_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Bene_Mailing_Street_2__c</fullName>
    <label>Bene Mailing Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>