force-app/main/default/objects/Intake__c/fields/Bene_Mailing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Bene_Mailing_Zip__c</fullName>
    <label>Bene Mailing Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>