force-app/main/default/objects/Intake__c/fields/Bene_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bene_Middle_Name__c</fullName>
    <label>Bene Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>