force-app/main/default/objects/Intake__c/fields/Bene_Nick_Name__c.field-meta.xml
<CustomField>
    <fullName>Bene_Nick_Name__c</fullName>
    <label>Bene Nick Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>