force-app/main/default/objects/Intake__c/fields/Bene_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Bene_Phone_1__c</fullName>
    <label>Bene Phone 1</label>
    <type>Phone</type>
</CustomField>