force-app/main/default/objects/Intake__c/fields/Bene_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Bene_Phone_2__c</fullName>
    <label>Bene Phone 2</label>
    <type>Phone</type>
</CustomField>