force-app/main/default/objects/Intake__c/fields/Bene_Place_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Bene_Place_of_Birth__c</fullName>
    <label>Bene Place of Birth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>