force-app/main/default/objects/Intake__c/fields/Bene_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Bene_Preferred_Language__c</fullName>
    <label>Bene Preferred Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>