force-app/main/default/objects/Intake__c/fields/Bene_Prepaid_Funeral_Burial_Contract__c.field-meta.xml
<CustomField>
    <fullName>Bene_Prepaid_Funeral_Burial_Contract__c</fullName>
    <label>Bene Prepaid Funeral/Burial Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>