force-app/main/default/objects/Intake__c/fields/Bene_Residence_Organization__c.field-meta.xml
<CustomField>
    <fullName>Bene_Residence_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bene Residence Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake (Bene Residence Organization)</relationshipLabel>
    <relationshipName>Intake4</relationshipName>
    <type>Lookup</type>
</CustomField>