force-app/main/default/objects/Intake__c/fields/Bene_Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>Bene_Residence_Type__c</fullName>
    <label>Bene Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apartment/Duplex</fullName>
            </value>
            <value>
                <fullName>Assisted Living Center</fullName>
            </value>
            <value>
                <fullName>Group Home</fullName>
            </value>
            <value>
                <fullName>HCS Host Home</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Private Home</fullName>
            </value>
            <value>
                <fullName>Rehab Center/Hospital</fullName>
            </value>
            <value>
                <fullName>State Supported Living Center</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>