force-app/main/default/objects/Intake__c/fields/Bene_Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Bene_Social_Security_Number__c</fullName>
    <label>Bene Social Security Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>