force-app/main/default/objects/Intake__c/fields/Bene_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Bene_Suffix__c</fullName>
    <label>Bene Suffix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>