force-app/main/default/objects/Intake__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Trust_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>