force-app/main/default/objects/Intake__c/fields/Beneficiary_Age_Input__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Age_Input__c</fullName>
    <label>Beneficiary Age (Input)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>