force-app/main/default/objects/Intake__c/fields/Beneficiary_Is_Grantor__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Is_Grantor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beneficiary Is Grantor</label>
    <type>Checkbox</type>
</CustomField>