force-app/main/default/objects/Intake__c/fields/Best_Time_and_Way_to_Reach_Caller__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_and_Way_to_Reach_Caller__c</fullName>
    <label>Best Time and Way to Reach Caller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>