force-app/main/default/objects/Intake__c/fields/Call_Inquiry_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Inquiry_Email_Sent_Date__c</fullName>
    <label>Call Inquiry Email Sent Date</label>
    <type>Date</type>
</CustomField>