force-app/main/default/objects/Intake__c/fields/Call_Taker__c.field-meta.xml
<CustomField>
    <fullName>Call_Taker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Taker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intake2</relationshipName>
    <type>Lookup</type>
</CustomField>