force-app/main/default/objects/Intake__c/fields/Caller_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Caller_Phone_Number__c</fullName>
    <label>Caller Phone Number</label>
    <type>Phone</type>
</CustomField>