force-app/main/default/objects/Intake__c/fields/Caller_Relationship_to_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Caller_Relationship_to_Beneficiary__c</fullName>
    <label>Caller Relationship to Beneficiary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Other Family Member</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>