force-app/main/default/objects/Intake__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Intake</relationshipLabel>
    <relationshipName>Intake</relationshipName>
    <type>Lookup</type>
</CustomField>