force-app/main/default/objects/Intake__c/fields/Cause_Number__c.field-meta.xml
<CustomField>
    <fullName>Cause_Number__c</fullName>
    <label>Cause Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>