force-app/main/default/objects/Intake__c/fields/Co_Conservator_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Co_Conservator_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Conservator Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake (Co-Conservator Account Lookup)</relationshipLabel>
    <relationshipName>Intake6</relationshipName>
    <type>Lookup</type>
</CustomField>