force-app/main/default/objects/Intake__c/fields/Co_Conservator_Contact__c.field-meta.xml
<CustomField>
    <fullName>Co_Conservator_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Conservator Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake (Co-Conservator Contact)</relationshipLabel>
    <relationshipName>Intake2</relationshipName>
    <type>Lookup</type>
</CustomField>