force-app/main/default/objects/Intake__c/fields/Co_Guardian_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Co_Guardian_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Guardian Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake (Co-Guardian Account Lookup)</relationshipLabel>
    <relationshipName>Intake7</relationshipName>
    <type>Lookup</type>
</CustomField>