force-app/main/default/objects/Intake__c/fields/Co_Guardian_Contact__c.field-meta.xml
<CustomField>
    <fullName>Co_Guardian_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Guardian Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake (Co-Guardian Contact)</relationshipLabel>
    <relationshipName>Intake3</relationshipName>
    <type>Lookup</type>
</CustomField>