force-app/main/default/objects/Intake__c/fields/Co_POA_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Co_POA_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-POA Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake (Co-POA Account Lookup)</relationshipLabel>
    <relationshipName>IntakekfLc</relationshipName>
    <type>Lookup</type>
</CustomField>