force-app/main/default/objects/Intake__c/fields/Co_Power_of_Attorney_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Co_Power_of_Attorney_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Power of Attorney Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake (Co-Power of Attorney)</relationshipLabel>
    <relationshipName>Intake4</relationshipName>
    <type>Lookup</type>
</CustomField>