force-app/main/default/objects/Intake__c/fields/Conservator_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Conservator_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conservator Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake</relationshipLabel>
    <relationshipName>Intake</relationshipName>
    <type>Lookup</type>
</CustomField>