force-app/main/default/objects/Intake__c/fields/Conservator_Contact__c.field-meta.xml
<CustomField>
    <fullName>Conservator_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conservator Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake (Conservator)</relationshipLabel>
    <relationshipName>Trust_Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>