force-app/main/default/objects/Intake__c/fields/Create_Beneficiary_Only__c.field-meta.xml
<CustomField>
    <fullName>Create_Beneficiary_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use to only create the Beneficiary Person Account so it is available to use in a Service Enrollment. Will not do any of the other processing.</inlineHelpText>
    <label>Create Beneficiary Only</label>
    <type>Checkbox</type>
</CustomField>