force-app/main/default/objects/Intake__c/fields/Current_Needs_Requests__c.field-meta.xml
<CustomField>
    <fullName>Current_Needs_Requests__c</fullName>
    <label>Current Needs/Requests</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>