force-app/main/default/objects/Intake__c/fields/Date_Joinder_Received_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Joinder_Received_Email_Sent__c</fullName>
    <label>Date Joinder Received Email Sent</label>
    <type>Date</type>
</CustomField>