force-app/main/default/objects/Intake__c/fields/Date_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_Processed__c</fullName>
    <label>Date Processed</label>
    <type>Date</type>
</CustomField>