force-app/main/default/objects/Intake__c/fields/Date_Signed_by_the_Judge__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed_by_the_Judge__c</fullName>
    <label>Date Signed by the Judge</label>
    <type>Date</type>
</CustomField>