force-app/main/default/objects/Intake__c/fields/Disabilities__c.field-meta.xml
<CustomField>
    <fullName>Disabilities__c</fullName>
    <label>Disabilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Disability_Options</valueSetName>
    </valueSet>
</CustomField>