force-app/main/default/objects/Intake__c/fields/Disability_Description__c.field-meta.xml
<CustomField>
    <fullName>Disability_Description__c</fullName>
    <inlineHelpText>If Other is selected in Disabilities, please specify</inlineHelpText>
    <label>Disability Description</label>
    <type>TextArea</type>
</CustomField>