force-app/main/default/objects/Intake__c/fields/Employed__c.field-meta.xml
<CustomField>
    <fullName>Employed__c</fullName>
    <label>Employed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>