force-app/main/default/objects/Intake__c/fields/Expected_Initial_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Initial_Deposit_Amount__c</fullName>
    <label>Expected Initial Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>