force-app/main/default/objects/Intake__c/fields/Expected_Trust_Type__c.field-meta.xml
<CustomField>
    <fullName>Expected_Trust_Type__c</fullName>
    <label>Expected Trust Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Party</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>