force-app/main/default/objects/Intake__c/fields/Funeral_Agency__c.field-meta.xml
<CustomField>
    <fullName>Funeral_Agency__c</fullName>
    <label>Funeral Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>