force-app/main/default/objects/Intake__c/fields/Funeral_Plan_Contact__c.field-meta.xml
<CustomField>
    <fullName>Funeral_Plan_Contact__c</fullName>
    <label>Funeral Plan Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>