force-app/main/default/objects/Intake__c/fields/Funeral_Plan_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Funeral_Plan_Contact_Phone__c</fullName>
    <label>Funeral Plan Contact Phone</label>
    <type>Phone</type>
</CustomField>