force-app/main/default/objects/Intake__c/fields/Funeral_Plan_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Funeral_Plan_Policy_Number__c</fullName>
    <label>Funeral Plan Policy Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>