force-app/main/default/objects/Intake__c/fields/Grantor_2_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Grantor_2_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grantor #2 Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake (Grantor #2 Lookup)</relationshipLabel>
    <relationshipName>IntakekfWp</relationshipName>
    <type>Lookup</type>
</CustomField>