force-app/main/default/objects/Intake__c/fields/Grantor_2_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Grantor_2_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grantor #2 Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake (C Donor #2)</relationshipLabel>
    <relationshipName>Trust_ApplicationsKfs6</relationshipName>
    <type>Lookup</type>
</CustomField>