force-app/main/default/objects/Intake__c/fields/Grantor_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grantor Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake (Grantor Account Lookup)</relationshipLabel>
    <relationshipName>IntakekfWf</relationshipName>
    <type>Lookup</type>
</CustomField>