force-app/main/default/objects/Intake__c/fields/Grantor_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grantor Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake (C Donor)</relationshipLabel>
    <relationshipName>Trust_Applicationsaw1I</relationshipName>
    <type>Lookup</type>
</CustomField>