force-app/main/default/objects/Intake__c/fields/Grantor_is_PR__c.field-meta.xml
<CustomField>
    <fullName>Grantor_is_PR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grantor is PR</label>
    <type>Checkbox</type>
</CustomField>