force-app/main/default/objects/Intake__c/fields/Grantor_is_Rep_Payee__c.field-meta.xml
<CustomField>
    <fullName>Grantor_is_Rep_Payee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grantor is Rep Payee</label>
    <type>Checkbox</type>
</CustomField>