force-app/main/default/objects/Intake__c/fields/GrantorLast_Name__c.field-meta.xml
<CustomField>
    <fullName>GrantorLast_Name__c</fullName>
    <label>Grantor Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>