force-app/main/default/objects/Intake__c/fields/Guardian_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guardian Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake (Guardian Account)</relationshipLabel>
    <relationshipName>Intake1</relationshipName>
    <type>Lookup</type>
</CustomField>