force-app/main/default/objects/Intake__c/fields/Guardian_Contact__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guardian Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake (Guardian)</relationshipLabel>
    <relationshipName>Trust_Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>