force-app/main/default/objects/Intake__c/fields/HHSC_Disability_Determination__c.field-meta.xml
<CustomField>
    <fullName>HHSC_Disability_Determination__c</fullName>
    <label>HHSC Disability Determination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>